--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,3 +1,4 @@
 <resources>
-    <string name="app_name">MoreTechHackathon</string>
+    <string name="app_name" translatable="false">MoreTechHackathon</string>
+    <string name="chat">Chat</string>
 </resources>
