Add icons for load, add atm details content

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,24 +1,34 @@
 <resources>
     <string name="app_name" translatable="false">MoreTechHackathon</string>
-    <string name="km_away">км от вас</string>
-    <string name="bank_office">Отделение</string>
-    <string name="individuals">Физлица</string>
-    <string name="entities">Юрлица</string>
-    <string name="load_now">Сейчас загруженность: </string>
-    <string name="low">низкая</string>
-    <string name="medium">средняя</string>
-    <string name="high">высокая</string>
-    <string name="today_working_until">Сегодня работает до</string>
-    <string name="day_off">выходной</string>
-    <string name="day_off_today">Сегодня выходной</string>
-    <string name="accessible_limited_mobility">Подходит маломобильным</string>
-    <string name="accessible_limited_mobility_desc">Есть пандус и вызов сотрудника</string>
-    <string name="make_a_route">Проложить маршрут</string>
-    <string name="bank_offices">Отделения</string>
-    <string name="rating_desc">Мы подобрали для Вас подходящие отделения ВТБ с учетом Вашего местоположения и загруженности банка</string>
-    <string name="for_service">по услуге</string>
-    <string name="vtb_office">Отделение ВТБ</string>
-    <string name="vtb_atm">Банкомат ВТБ</string>
-    <string name="more_info">Подробнее</string>
+    <string name="km_away">km from you</string>
+    <string name="bank_office">Bank office</string>
+    <string name="individuals">Individuals</string>
+    <string name="entities">Entities</string>
+    <string name="load_now">Current workload:</string>
+    <string name="low">low</string>
+    <string name="medium">medium</string>
+    <string name="high">high</string>
+    <string name="today_working_until">Today working until</string>
+    <string name="day_off">Day off</string>
+    <string name="day_off_today">Today is a day off</string>
+    <string name="accessible_limited_mobility">Suitable for people with limited mobility</string>
+    <string name="accessible_limited_mobility_desc">There is a ramp and an employee call</string>
+    <string name="make_a_route">Get a route</string>
+    <string name="bank_offices">Bank offices</string>
+    <string name="rating_desc">We have selected suitable VTB offices for you, taking into account your location and the bank’s workload</string>
+    <string name="for_service">for service</string>
+    <string name="vtb_office">VTB office</string>
+    <string name="vtb_atm">VTB ATM</string>
+    <string name="more_info">More info</string>
     <string name="chat">Chat</string>
+    <string name="works_around_the_clock">Works around the clock</string>
+    <string name="works_around_the_clock_desc">Mon-Sun: 24 hours a day</string>
+    <string name="not_accessible_limited_mobility">Not suitable for people with limited mobility</string>
+    <string name="currently_unavailable">Currently unavailable</string>
+    <string name="accessible_blind">Accessible for people with visual impairments</string>
+    <string name="not_accessible_blind">Accessible for people with visual impairments</string>
+    <string name="nfc_works">Works with nfc</string>
+    <string name="nfc_does_not_work">Does not work with nfc</string>
+    <string name="qr_works">Works with QR</string>
+    <string name="qr_does_not_work">Does not work with QR</string>
 </resources>
