--- a/app/src/main/res/values-ru/strings.xml
+++ b/app/src/main/res/values-ru/strings.xml
@@ -1,4 +1,34 @@
 <?xml version="1.0" encoding="utf-8"?>
 <resources>
+    <string name="km_away">км от вас</string>
+    <string name="individuals">Физлица</string>
+    <string name="entities">Юрлица</string>
+    <string name="load_now">"Сейчас загруженность: "</string>
+    <string name="low">низкая</string>
+    <string name="medium">средняя</string>
+    <string name="high">высокая</string>
+    <string name="today_working_until">Сегодня работает до</string>
+    <string name="day_off">выходной</string>
+    <string name="day_off_today">Сегодня выходной</string>
+    <string name="accessible_limited_mobility">Подходит маломобильным</string>
+    <string name="accessible_limited_mobility_desc">Есть пандус и вызов сотрудника</string>
+    <string name="make_a_route">Проложить маршрут</string>
+    <string name="bank_offices">Отделения</string>
+    <string name="rating_desc">Мы подобрали для Вас подходящие отделения ВТБ с учетом Вашего местоположения и загруженности банка</string>
+    <string name="for_service">по услуге</string>
+    <string name="vtb_office">Отделение ВТБ</string>
+    <string name="vtb_atm">Банкомат ВТБ</string>
+    <string name="more_info">Подробнее</string>
     <string name="chat">Чат</string>
+    <string name="bank_office">Отделение</string>
+    <string name="works_around_the_clock">Работает круглосуточно</string>
+    <string name="works_around_the_clock_desc">Пн-вс: круглосуточно</string>
+    <string name="not_accessible_limited_mobility">Не подходит маломобильным</string>
+    <string name="currently_unavailable">В данный момент недоступно</string>
+    <string name="accessible_blind">Подходит людям с нарушениями зрения</string>
+    <string name="not_accessible_blind">Не подходит людям с нарушениями зрения</string>
+    <string name="nfc_works">Доступна оплата по NFC</string>
+    <string name="nfc_does_not_work">Недоступна оплата по NFC</string>
+    <string name="qr_works">Работает с QR</string>
+    <string name="qr_does_not_work">Не работает с QR</string>
 </resources>
