--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -21,7 +21,6 @@
     <string name="vtb_atm">Банкомат ВТБ</string>
     <string name="more_info">Подробнее</string>
     <string name="chat">Chat</string>
-    <string name="chat">Chat</string>
     <string name="works_around_the_clock">Works around the clock</string>
     <string name="works_around_the_clock_desc">Mon-Sun: 24 hours a day</string>
     <string name="not_accessible_limited_mobility">Not suitable for people with limited mobility</string>
@@ -47,4 +46,5 @@
     <string name="visionProblems">Vision problems</string>
     <string name="movementProblems">Movement problems</string>
     <string name="noDisability">No disabilities</string>
+    <string name="recommendations">Recommendations</string>
 </resources>
