--- a/app/src/main/res/values-ru/strings.xml
+++ b/app/src/main/res/values-ru/strings.xml
@@ -21,16 +21,6 @@
     <string name="vtb_atm">Банкомат ВТБ</string>
     <string name="more_info">Подробнее</string>
     <string name="bank_office">Отделение</string>
-    <string name="works_around_the_clock">Работает круглосуточно</string>
-    <string name="works_around_the_clock_desc">Пн-вс: круглосуточно</string>
-    <string name="not_accessible_limited_mobility">Не подходит маломобильным</string>
-    <string name="currently_unavailable">В данный момент недоступно</string>
-    <string name="accessible_blind">Подходит людям с нарушениями зрения</string>
-    <string name="not_accessible_blind">Не подходит людям с нарушениями зрения</string>
-    <string name="nfc_works">Доступна оплата по NFC</string>
-    <string name="nfc_does_not_work">Недоступна оплата по NFC</string>
-    <string name="qr_works">Работает с QR</string>
-    <string name="qr_does_not_work">Не работает с QR</string>
     <string name="route">Маршрут</string>
     <string name="drive">Доехать</string>
     <string name="where">Куда: %1$s</string>
@@ -46,5 +36,5 @@
     <string name="visionProblems">Нарушения зрения</string>
     <string name="movementProblems">Ограничения в передвижении</string>
     <string name="noDisability">Нет ограничений</string>
-    <string name="recommendations">Рекомендации</string>
+    <string name="history">История</string>
 </resources>
